Добавлена ссылка на заметки

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="main.css">
     <title>Портфолио</title>
 </head>
 <body>
@@ -13,16 +13,16 @@
     <div class="list__title">Портфолио <a href="https://github.com/Teronvill">Teronvill</a></div>
     <ul class="list__items">
 
-    <li class="item"><div class="item__title">Учебный проект</div>
+    <li class="item"><div class="item__title">Учебный проект НЕ ЗАЛИТ</div>
     <div class="item__text">Тут описывается что за приложение и как оно было сделано при помощи каких средств возможно учебное или какое то иное</div>
     <div class="item__a"><a href="http://www.yandex.com">Открыть .io</a> \ <a href="http://www.yandex.com">GitHub</a></div></li>
 
-    <li class="item"><div class="item__title">Дипломная работа</div>
+    <li class="item"><div class="item__title">Дипломная работа НЕ ЗАЛИТ</div>
         <div class="item__text">Тут описывается что за приложение и как оно было сделано при помощи каких средств возможно учебное или какое то иное</div>
         <div class="item__a"><a href="http://www.yandex.com"></a> <a href="http://www.yandex.com">GitHub</a></div></li>
         <li class="item"><div class="item__title">Сайт заметок</div>
-            <div class="item__text">Тут описывается что за приложение и как оно было сделано при помощи каких средств возможно учебное или какое то иное</div>
-            <div class="item__a"><a href="http://www.yandex.com">Открыть .io</a> \ <a href="http://www.yandex.com">GitHub</a></div></li>
+            <div class="item__text">Сайт заметок с сохранением данных в localStorage, палитра для изменения цветов была реализована с помощью библиотеки jsColor</div>
+            <div class="item__a"><a href="https://teronvill.github.io/project1/">Открыть .io</a> \ <a href="https://github.com/Teronvill/project1">GitHub</a></div></li>
             <li class="item"><div class="item__title">Next?</div>
                 <div class="item__text">Тут описывается что за приложение и как оно было сделано при помощи каких средств возможно учебное или какое то иное</div>
                 <div class="item__a"><a href="http://www.yandex.com">Открыть .io</a> \ <a href="http://www.yandex.com">GitHub</a></div></li>
