--- a/index.html
+++ b/index.html
@@ -1,33 +1,65 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="portfolio.png" type="image/x-icon">
     <title>Портфолио</title>
 </head>
+
 <body>
     <div class="container">
-    <div class="list">
-    <div class="list__title">Портфолио <a href="https://github.com/Teronvill">Teronvill</a></div>
-    <ul class="list__items">
+        <div class="list">
+            <div class="list__title">Портфолио <a href="https://github.com/Teronvill">Teronvill</a></div>
+            <ul class="list__items">
 
-    <li class="item"><div class="item__title">Учебный проект НЕ ЗАЛИТ</div>
-    <div class="item__text">когда-нибудь я залью его... наверно...</div>
-    <div class="item__a"><a href="https://github.com/Teronvill">Открыть .io</a> \ <a href="https://github.com/Teronvill">GitHub</a></div></li>
+                <li class="item">
+                    <div class="item__title">Учебный проект НЕ ЗАЛИТ</div>
+                    <div class="item__text">когда-нибудь я залью его... наверно...</div>
+                    <div class="item__a"><a href="https://github.com/Teronvill">Открыть .io</a> \ <a
+                            href="https://github.com/Teronvill">GitHub</a></div>
+                </li>
 
-    <li class="item"><div class="item__title">Дипломная работа</div>
-        <div class="item__text"><p>Проект написан во время обучения в универе в рамках ВКР. Сам проект представляет из себя сайт с формами обратной связи и заказом товаром, информация хранится в БД, обработка заказов происходит в панели управления. В панели управления выводится статистика по заказам, формируются отчёты о деятельности предприятия и осуществляется управление таблицами и записями БД, .</p> <p>Разработка велась на HTML CSS PHP JS, немного jquery, частично админ панель реализована с помощью boostrap, также использовались библиотеки: thumberlina (карусель), fancybox (открытие документов и изображений в шадоубоксах), fpdf (pdf отчеты с помощью PHP)</p></div>
-        <div class="item__a"><a href="http://www.yandex.com"></a> <a href="https://github.com/Teronvill/VKR">GitHub</a></div></li>
-        <li class="item"><div class="item__title">Сайт заметок</div>
-            <div class="item__text">Сайт заметок с сохранением данных в localStorage, палитра для изменения цветов была реализована с помощью библиотеки jsColor</div>
-            <div class="item__a"><a href="https://teronvill.github.io/project1/">Открыть .io</a> \ <a href="https://github.com/Teronvill/project1">GitHub</a></div></li>
-            <li class="item"><div class="item__title">Next?</div>
-                <div class="item__text">*Перекати поле*</div>
-                <div class="item__a"><a href="http://www.yandex.com">Открыть .io</a> \ <a href="http://www.yandex.com">GitHub</a></div></li>
-    </ul>
-</div>
-</div>
+                <li class="item">
+                    <div class="item__title">Дипломная работа</div>
+                    <div class="item__text">
+                        <p>Проект написан во время обучения в универе в рамках ВКР. Сам проект представляет из себя сайт
+                            с формами обратной связи и заказом товаром, информация хранится в БД, обработка заказов
+                            происходит в панели управления. В панели управления выводится статистика по заказам,
+                            формируются отчёты о деятельности предприятия и осуществляется управление таблицами и
+                            записями БД, .</p>
+                        <p>Разработка велась на HTML CSS PHP JS, немного jquery, частично админ панель реализована с
+                            помощью boostrap, также использовались библиотеки: thumberlina (карусель), fancybox
+                            (открытие документов и изображений в шадоубоксах), fpdf (pdf отчеты с помощью PHP)</p>
+                    </div>
+                    <div class="item__a"><a href="http://www.yandex.com"></a> <a
+                            href="https://github.com/Teronvill/VKR">GitHub</a></div>
+                </li>
+                <li class="item">
+                    <div class="item__title">Сайт заметок</div>
+                    <div class="item__text">Сайт заметок с сохранением данных в localStorage, палитра для изменения
+                        цветов была реализована с помощью библиотеки jsColor</div>
+                    <div class="item__a"><a href="https://teronvill.github.io/project1/">Открыть .io</a> \ <a
+                            href="https://github.com/Teronvill/project1">GitHub</a></div>
+                </li>
+                <li class="item">
+                    <div class="item__title">No code проекты на Bubble</div>
+                    <div class="item__text"><ul><li><a href="https://mamedov-ruslan-200922.bubbleapps.io/version-test?debug_mode=true">Калькулятор заработной платы разработчика</a></li>
+                        </ul></div>
+                    <div class="item__a"></div>
+                </li>
+                <li class="item">
+                    <div class="item__title">Next?</div>
+                    <div class="item__text">*Перекати поле*</div>
+                    <div class="item__a"><a href="http://www.yandex.com">Открыть .io</a> \ <a
+                            href="http://www.yandex.com">GitHub</a></div>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
+
 </html>
