--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 <li class="item">
                     <div class="item__title">Учебный проект НЕ ЗАЛИТ</div>
-                    <div class="item__text">когда-нибудь я залью его... наверно...</div>
+                    <div class="item__text">когда-нибудь я залью его... </div>
                     <div class="item__a"><a href="https://github.com/Teronvill">Открыть .io</a> \ <a
                             href="https://github.com/Teronvill">GitHub</a></div>
                 </li>
@@ -51,12 +51,12 @@
                         </ul></div>
                     <div class="item__a"></div>
                 </li>
-                <li class="item">
+                <!-- <li class="item">
                     <div class="item__title">Next?</div>
                     <div class="item__text">*Перекати поле*</div>
                     <div class="item__a"><a href="http://www.yandex.com">Открыть .io</a> \ <a
                             href="http://www.yandex.com">GitHub</a></div>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
