--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
             <div class="list__title">Портфолио <a href="https://github.com/Teronvill">Teronvill</a></div>
             <ul class="list__items">
 
-                <li class="item">
-                    <div class="item__title">Учебный проект НЕ ЗАЛИТ</div>
-                    <div class="item__text">когда-нибудь я залью его... </div>
-                    <div class="item__a"><a href="https://github.com/Teronvill">Открыть .io</a> \ <a
-                            href="https://github.com/Teronvill">GitHub</a></div>
-                </li>
 
                 <li class="item">
                     <div class="item__title">Дипломная работа</div>
@@ -32,24 +26,32 @@
                             формируются отчёты о деятельности предприятия и осуществляется управление таблицами и
                             записями БД, .</p>
                         <p>Разработка велась на HTML CSS PHP JS, немного jquery, частично админ панель реализована с
-                            помощью boostrap, также использовались библиотеки: thumberlina (карусель), fancybox
+                            помощью boostrap5, также использовались библиотеки: thumberlina (карусель), fancybox
                             (открытие документов и изображений в шадоубоксах), fpdf (pdf отчеты с помощью PHP)</p>
                     </div>
                     <div class="item__a"><a href="http://www.yandex.com"></a> <a
                             href="https://github.com/Teronvill/VKR">GitHub</a></div>
                 </li>
                 <li class="item">
-                    <div class="item__title">Сайт заметок</div>
-                    <div class="item__text">Сайт заметок с сохранением данных в localStorage, палитра для изменения
+                    <div class="item__title">Приложение "Заметки"</div>
+                    <div class="item__text">Приложение сохраняет данные в localStorage, палитра для изменения
                         цветов была реализована с помощью библиотеки jsColor</div>
                     <div class="item__a"><a href="https://teronvill.github.io/project1/">Открыть .io</a> \ <a
                             href="https://github.com/Teronvill/project1">GitHub</a></div>
                 </li>
                 <li class="item">
                     <div class="item__title">No code проекты на Bubble</div>
-                    <div class="item__text"><ul><li><a href="https://mamedov-ruslan-200922.bubbleapps.io/version-test?debug_mode=true">Калькулятор заработной платы разработчика</a></li>
+                    <div class="item__text"><ul><li><a href="https://bubble.io/page?name=index&id=mamedov-ruslan-200922&tab=tabs-1">Калькулятор заработной платы разработчика</a></li>
+                        </ul></div>
+                        <div class="item__text"><ul><li><a href="https://bubble.io/page?type=page&name=dashboard&id=280922-mamedov-ruslan&tab=tabs-1">Сервис для управления подпиской на контент и отправки постов через API Telegram</a></li>
                         </ul></div>
                     <div class="item__a"></div>
+                </li>
+                <li class="item">
+                    <div class="item__title">Верстка лендинга на Vue</div>
+                    <div class="item__text">Простой лендинг компании по оказанию цифровых услуг на Vue.</div>
+                    <div class="item__a"></a><a
+                            href="https://github.com/Teronvill/VueProj">GitHub</a></div>
                 </li>
                 <!-- <li class="item">
                     <div class="item__title">Next?</div>
@@ -57,6 +59,12 @@
                     <div class="item__a"><a href="http://www.yandex.com">Открыть .io</a> \ <a
                             href="http://www.yandex.com">GitHub</a></div>
                 </li> -->
+                <li class="item">
+                    <div class="item__title">Учебный проект по JS (НЕ ЗАЛИТ)</div>
+                    <div class="item__text">Когда-нибудь я отполирую его и залью его... </div>
+                    <div class="item__a"><a href="https://github.com/Teronvill">Открыть .io</a> \ <a
+                            href="https://github.com/Teronvill">GitHub</a></div>
+                </li>
             </ul>
         </div>
     </div>
