--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </li> -->
                 <li class="item">
                     <div class="item__title">Учебный проект по JS (НЕ ЗАЛИТ)</div>
-                    <div class="item__text">Когда-нибудь я отполирую его и залью его... </div>
+                    <div class="item__text">Когда-нибудь я отполирую его и залью... </div>
                     <div class="item__a"><a href="https://github.com/Teronvill">Открыть .io</a> \ <a
                             href="https://github.com/Teronvill">GitHub</a></div>
                 </li>
