--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </li>
                 <li class="item">
                     <div class="item__title">Верстка лендинга на Vue</div>
-                    <div class="item__text">Простой лендинг компании по оказанию цифровых услуг на Vue.</div>
+                    <div class="item__text">Лендинг компании по оказанию цифровых услуг на Vue.</div>
                     <div class="item__a"></a><a
                             href="https://github.com/Teronvill/VueProj">GitHub</a></div>
                 </li>
@@ -59,12 +59,12 @@
                     <div class="item__a"><a href="http://www.yandex.com">Открыть .io</a> \ <a
                             href="http://www.yandex.com">GitHub</a></div>
                 </li> -->
-                <li class="item">
+                <!-- <li class="item">
                     <div class="item__title">Учебный проект по JS (НЕ ЗАЛИТ)</div>
                     <div class="item__text">Когда-нибудь я отполирую его и залью... </div>
                     <div class="item__a"><a href="https://github.com/Teronvill">Открыть .io</a> \ <a
                             href="https://github.com/Teronvill">GitHub</a></div>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
